--- a/index.html
+++ b/index.html
@@ -1,15 +1,112 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
 
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
-</head>
-
-<body>
-
-</body>
-
+  <body>
+    <header>
+      <nav>
+        <a href="#">WebStudio</a>
+        <ul>
+          <li>WebStudio</li>
+          <li>Портфолио</li>
+          <li>Контакты</li>
+        </ul>
+      </nav>
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com">info@devstudio.com </a>
+        </li>
+        <li>
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </header>
+    <section>
+      <h1>Эффективные решения для вашего бизнеса</h1>
+      <input type="button" value="Заказать услугу" />
+    </section>
+    <main>
+      <ul>
+        <li>
+          <h3>Внимание к деталям</h3>
+          <p>
+            Идейные соображения, а также<br />
+            начало повседневной работы по<br />
+            формированию позиции.
+          </p>
+        </li>
+        <li>
+          <h3>Пунктуальность</h3>
+          <p>
+            Задача организации, в особенности <br />
+            же рамки и место обучения кадров <br />
+            влечет за собой.
+          </p>
+        </li>
+        <li>
+          <h3>Планирование</h3>
+          <p>
+            Равным образом консультация с <br />
+            широким активом в значительной <br />степени обуславливает.
+          </p>
+        </li>
+        <li>
+          <h3>Современные технологии</h3>
+          <p>
+            Значимость этих проблем настолько <br />очевидна, что реализация плановых <br />заданий.
+          </p>
+        </li>
+      </ul>
+      <h2>Чем мы занимаемся</h2>
+      <ul>
+        <li><img src="./images/img1.jpg" alt="Руки програмирут " width="370" height="294" /></li>
+        <li>
+          <img src="./images/img2.jpg" alt="верстка мобильного дизайна" width="370" height="294" />
+        </li>
+        <li><img src="./images/img3.jpg" alt="подбор цвета" width="370" height="294" /></li>
+      </ul>
+    </main>
+    <section>
+      <h2>Наша команда</h2>
+      <ul>
+        <li>
+          <img src="./images/img_people1.jpg" alt="Фото Игорь Демьяненко" />
+          <h3>Игорь Демьяненко</h3>
+          <p lang="en">Product Designer</p>
+        </li>
+        <li>
+          <img src="./images/img_people2.jpg" alt="Фото Ольга Репина" />
+          <h3>Ольга Репина</h3>
+          <p lang="en">Frontend Developer</p>
+        </li>
+        <li>
+          <img src="./images/img_people3.jpg" alt="Фото Николай Тарасов" />
+          <h3>Николай Тарасов</h3>
+          <p lang="en">Marketing</p>
+        </li>
+        <li>
+          <img src="./images/img_people4.jpg" alt="Фото Михаил Ермаков" />
+          <h3>Михаил Ермаков</h3>
+          <p lang="en">UI Designer</p>
+        </li>
+      </ul>
+    </section>
+    <footer>
+      <a href="#">WebStudio</a>
+      <address>г. Киев, пр-т Леси Украинки, 26</address>
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com">info@devstudio.com </a>
+        </li>
+        <li>
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
