--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         </li>
       </ul>
     </header>
-    <section>
+    <main>
       <h1>Эффективные решения для вашего бизнеса</h1>
       <input type="button" value="Заказать услугу" />
-    </section>
-    <main>
+    </main>
+    <section>
       <ul>
         <li>
           <h3>Внимание к деталям</h3>
@@ -70,7 +70,7 @@
         </li>
         <li><img src="./images/img3.jpg" alt="подбор цвета" width="370" height="294" /></li>
       </ul>
-    </main>
+    </section>
     <section>
       <h2>Наша команда</h2>
       <ul>
@@ -98,15 +98,17 @@
     </section>
     <footer>
       <a href="#">WebStudio</a>
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
-      <ul>
-        <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com </a>
-        </li>
-        <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      <address>
+        <ul>
+          <li>г. Киев, пр-т Леси Украинки, 26</li>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com </a>
+          </li>
+          <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
