--- a/index.html
+++ b/index.html
@@ -27,67 +27,78 @@
       </ul>
     </header>
     <main>
-      <h1>Эффективные решения для вашего бизнеса</h1>
-      <input type="button" value="Заказать услугу" />
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <button>"Заказать услугу"</button>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          </li>
+        </ul>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li><img src="./images/img1.jpg" alt="Руки програмирут " width="370" height="294" /></li>
+          <li>
+            <img
+              src="./images/img2.jpg"
+              alt="верстка мобильного дизайна"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li><img src="./images/img3.jpg" alt="подбор цвета" width="370" height="294" /></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./images/img_people1.jpg" alt="Фото Игорь Демьяненко" />
+            <h3>Игорь Демьяненко</h3>
+            <p lang="en">Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/img_people2.jpg" alt="Фото Ольга Репина" />
+            <h3>Ольга Репина</h3>
+            <p lang="en">Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/img_people3.jpg" alt="Фото Николай Тарасов" />
+            <h3>Николай Тарасов</h3>
+            <p lang="en">Marketing</p>
+          </li>
+          <li>
+            <img src="./images/img_people4.jpg" alt="Фото Михаил Ермаков" />
+            <h3>Михаил Ермаков</h3>
+            <p lang="en">UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    <section>
-      <ul>
-        <li>
-          <h3>Внимание к деталям</h3>
-          <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-        </li>
-        <li>
-          <h3>Пунктуальность</h3>
-          <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-        </li>
-        <li>
-          <h3>Планирование</h3>
-          <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-        </li>
-        <li>
-          <h3>Современные технологии</h3>
-          <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-        </li>
-      </ul>
-      <h2>Чем мы занимаемся</h2>
-      <ul>
-        <li><img src="./images/img1.jpg" alt="Руки програмирут " width="370" height="294" /></li>
-        <li>
-          <img src="./images/img2.jpg" alt="верстка мобильного дизайна" width="370" height="294" />
-        </li>
-        <li><img src="./images/img3.jpg" alt="подбор цвета" width="370" height="294" /></li>
-      </ul>
-    </section>
-    <section>
-      <h2>Наша команда</h2>
-      <ul>
-        <li>
-          <img src="./images/img_people1.jpg" alt="Фото Игорь Демьяненко" />
-          <h3>Игорь Демьяненко</h3>
-          <p lang="en">Product Designer</p>
-        </li>
-        <li>
-          <img src="./images/img_people2.jpg" alt="Фото Ольга Репина" />
-          <h3>Ольга Репина</h3>
-          <p lang="en">Frontend Developer</p>
-        </li>
-        <li>
-          <img src="./images/img_people3.jpg" alt="Фото Николай Тарасов" />
-          <h3>Николай Тарасов</h3>
-          <p lang="en">Marketing</p>
-        </li>
-        <li>
-          <img src="./images/img_people4.jpg" alt="Фото Михаил Ермаков" />
-          <h3>Михаил Ермаков</h3>
-          <p lang="en">UI Designer</p>
-        </li>
-      </ul>
-    </section>
     <footer>
       <a href="#">WebStudio</a>
       <address>
         <ul>
-          <li>г. Киев, пр-т Леси Украинки, 26</li>
+          <li><a href="#"> г. Киев, пр-т Леси Украинки, 26</a></li>
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com </a>
           </li>
